Renamed suite name

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -25,6 +25,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateBeforeClass</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>validateBeforeMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
