--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\Automation_Java\SeleniumWebdriverDemo\testng.xml</span>
+                    <span>D:\Automation_Java\AutomationSeleniumWebdriver\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -146,19 +146,19 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Automation_Java\SeleniumWebdriverDemo\testng.xml</span>
+            <span class="header-content">D:\Automation_Java\AutomationSeleniumWebdriver\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;none&quot;&gt;
-  &lt;test name=&quot;Test&quot;&gt;
+  &lt;test name=&quot;Sanity Testing&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.akshay.automation.TC_Login&quot;/&gt;
       &lt;class name=&quot;com.akshay.automation.BaseClass&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- Sanity Testing --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -170,7 +170,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Sanity Testing (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -200,16 +200,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tc02')
 data.setCell(0, 2, 'com.akshay.automation.TC_Login')
-data.setCell(0, 3, 52091);
+data.setCell(0, 3, 25059);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'tc01')
 data.setCell(1, 2, 'com.akshay.automation.TC_Login')
-data.setCell(1, 3, 4008);
+data.setCell(1, 3, 4917);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 56 seconds</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -249,33 +249,41 @@ return data;
                 <span class="method-name">preSetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">validateBeforeClass</span>
+                <span class="method-start">3611 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">validateBeforeMethod</span>
+                <span class="method-start">3611 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">tc01</span>
-                <span class="method-start">3376 ms</span>
+                <span class="method-start">3612 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">validateBeforeMethod</span>
-                <span class="method-start">3376 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">validateAfterMethod</span>
-                <span class="method-start">7385 ms</span>
+                <span class="method-start">8530 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">validateBeforeMethod</span>
-                <span class="method-start">7386 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">tc02</span>
-                <span class="method-start">7387 ms</span>
+                <span class="method-start">8531 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">validateBeforeClass</span>
+                <span class="method-start">8531 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">validateBeforeMethod</span>
+                <span class="method-start">8531 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">validateAfterMethod</span>
-                <span class="method-start">59479 ms</span>
+                <span class="method-start">33591 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">59481 ms</span>
+                <span class="method-start">33594 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
