--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,32 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:45:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;preSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:45:55</td>   <td>6488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:45:55</td>   <td>6488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 18:45:55</td>   <td>6488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLogin.tc01_validateLogin()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">tc01_validateLogin</td> 
-  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:02</td>   <td>13594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:02</td>   <td>13595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:02</td>   <td>13597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 18:46:02</td>   <td>13597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLogin.tc03()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">tc03</td> 
-  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:50</td>   <td>61523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:50</td>   <td>61524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:46:50</td>   <td>61524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 18:46:50</td>   <td>61524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLogin.tc04()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">tc04</td> 
-  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:47:00</td>   <td>71604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 18:47:00</td>   <td>71606</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.TestCaseLogin@246ae04d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@356473385</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>19/08/29 19:34:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985922955</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/29 19:34:34</td>   <td>7050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">tc01</td> 
+  <td>main@985922955</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/29 19:34:39</td>   <td>12155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">tc02</td> 
+  <td>main@985922955</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>19/08/29 19:35:00</td>   <td>32772</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985922955</td>   <td></td> </tr>
 </table>
