--- a/test-output/old/LoginSuite/methods.html
+++ b/test-output/old/LoginSuite/methods.html
@@ -1,24 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>LoginSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;preSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:12</td>   <td>3551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:12</td>   <td>3551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/28 19:46:12</td>   <td>3551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.tc01()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">tc01</td> 
-  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:16</td>   <td>7282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:16</td>   <td>7283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:16</td>   <td>7283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/28 19:46:16</td>   <td>7284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.tc02()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">tc02</td> 
-  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:21</td>   <td>13006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/28 19:46:21</td>   <td>13012</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/29 19:17:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.setup.BaseClass@783e6358]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091156596</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/29 19:18:00</td>   <td>7915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageFactory.tc03()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageFactory@17550481]">tc03</td> 
+  <td>main@2091156596</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/29 19:18:06</td>   <td>13239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageFactory.tc04()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageFactory@17550481]">tc04</td> 
+  <td>main@2091156596</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/29 19:18:06</td>   <td>13245</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.setup.BaseClass@783e6358]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091156596</td>   <td></td> </tr>
 </table>
