--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75cab9">  <td>19/08/29 19:34:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">&gt;&gt;preSetUp</td> 
+<tr bgcolor="75cab9">  <td>19/08/30 12:53:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@256216b3]">&gt;&gt;preSetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985922955</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 19:34:34</td>   <td>7050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">tc01</td> 
+<tr bgcolor="fcd18c">  <td>19/08/30 12:53:50</td>   <td>6893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@256216b3]">tc01</td> 
   <td>main@985922955</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 19:34:39</td>   <td>12155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">tc02</td> 
+<tr bgcolor="fcd18c">  <td>19/08/30 12:53:56</td>   <td>12650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@256216b3]">tc02</td> 
   <td>main@985922955</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/29 19:35:00</td>   <td>32772</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageObject@256216b3]">&lt;&lt;tearDown</td> 
+<tr bgcolor="75cab9">  <td>19/08/30 12:54:10</td>   <td>26435</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@256216b3]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985922955</td>   <td></td> </tr>
 </table>
