--- a/test-output/old/LoginSuite/classes.html
+++ b/test-output/old/LoginSuite/classes.html
@@ -4,7 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.akshay.automation.testcases.TestCaseLoginPageFactory</td>
+<td>com.akshay.automation.testcases.pageobjects.TC_LoginPageObject</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tc01</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tc02</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.akshay.automation.testcases.pagefactory.TC_LoginPageFactory</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
