--- a/test-output/old/LoginSuite/methods.html
+++ b/test-output/old/LoginSuite/methods.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>LoginSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 19:17:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.setup.BaseClass@783e6358]">&gt;&gt;preSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091156596</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/29 19:18:00</td>   <td>7915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageFactory.tc03()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageFactory@17550481]">tc03</td> 
-  <td>main@2091156596</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/29 19:18:06</td>   <td>13239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseLoginPageFactory.tc04()[pri:0, instance:com.akshay.automation.testcases.TestCaseLoginPageFactory@17550481]">tc04</td> 
-  <td>main@2091156596</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/29 19:18:06</td>   <td>13245</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.setup.BaseClass@783e6358]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091156596</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:52:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.setup.BaseClass@16c0663d]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/30 12:53:04</td>   <td>6648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@23223dd8]">tc01</td> 
+  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/30 12:53:04</td>   <td>6658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@23223dd8]">tc02</td> 
+  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:53:04</td>   <td>6666</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.setup.BaseClass@16c0663d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:53:04</td>   <td>7425</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.setup.BaseClass@5a39699c]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="8d66b2">  <td>19/08/30 12:53:08</td>   <td>11532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageFactory.tc03()[pri:0, instance:com.akshay.automation.testcases.pagefactory.TC_LoginPageFactory@3cb5cdba]">tc03</td> 
+  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="8d66b2">  <td>19/08/30 12:53:08</td>   <td>11534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageFactory.tc04()[pri:0, instance:com.akshay.automation.testcases.pagefactory.TC_LoginPageFactory@3cb5cdba]">tc04</td> 
+  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:53:19</td>   <td>21569</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.setup.BaseClass@5a39699c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
 </table>
