--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:00</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;preSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:03</td>   <td>3609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:03</td>   <td>3609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/23 16:28:03</td>   <td>3610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.tc01()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">tc01</td> 
-  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:08</td>   <td>8528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:08</td>   <td>8529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:08</td>   <td>8529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/23 16:28:08</td>   <td>8529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.tc02()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">tc02</td> 
-  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:33</td>   <td>33590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>19/08/23 16:28:33</td>   <td>33592</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.TC_Login@47f37ef1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468177767</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:54:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.setup.BaseClass@23223dd8]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1531333864</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/30 12:54:23</td>   <td>7250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@4ec6a292]">tc01</td> 
+  <td>main@1531333864</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>19/08/30 12:54:23</td>   <td>7259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@4ec6a292]">tc02</td> 
+  <td>main@1531333864</td>   <td></td> </tr>
+<tr bgcolor="879365">  <td>19/08/30 12:54:23</td>   <td>7296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageFactory.tc03()[pri:0, instance:com.akshay.automation.testcases.pagefactory.TC_LoginPageFactory@1b40d5f0]">tc03</td> 
+  <td>main@1531333864</td>   <td></td> </tr>
+<tr bgcolor="879365">  <td>19/08/30 12:54:23</td>   <td>7301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageFactory.tc04()[pri:0, instance:com.akshay.automation.testcases.pagefactory.TC_LoginPageFactory@1b40d5f0]">tc04</td> 
+  <td>main@1531333864</td>   <td></td> </tr>
+<tr bgcolor="fcd18c">  <td>19/08/30 12:54:33</td>   <td>17340</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.setup.BaseClass@23223dd8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1531333864</td>   <td></td> </tr>
 </table>
